# ZY-agent-BE

./: .gitignore  zy.sql
backend/: .env  .env.bak  .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test.db  test_exam_output.json  test_export.docx  test_math_exam.json  zhiyi.db  zy.sql  后端基础层交付报告_PBI_07.md  智翼前端所需后端API清单.md  智翼平台开发规范与接口文档.md  智翼教师端功能开发计划.md
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  main.py
backend/app/ai/: llm_client.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  redis.py  security.py  utils.py
backend/app/middleware/: cors.py  logging.py
backend/app/models/: __init__.py  assignment.py  chat.py  class_exam_paper.py  class_resource.py  classes.py  exam_paper.py  exercise.py  file.py  knowledge.py  lesson_plan.py  summary.py  teaching_resource.py  user.py
backend/app/schemas/: agent.py  assignment.py  class_exam_paper.py  class_resource.py  classes.py  common.py  exam_paper.py  exercise.py  file.py  knowledge.py  lesson_plan.py  summary.py  teaching_resource.py  user.py
backend/app/services/: agent_service.py  assignment_service.py  class_exam_paper_service.py  class_resource_service.py  class_service.py  exam_paper_service.py  exercise_service.py  export_service.py  file_service.py  knowledge_service.py  lesson_plan_service.py  summary_service.py  teaching_resource_service.py  (+1 more)
backend/migrations/: add_exam_paper_id_to_assignments.sql  add_exam_papers.sql  add_teaching_resources.sql
backend/tests/: conftest.py  test_summary_module.py
(+32 files in other folders)
