[project]
name = "zhiyi-backend"
version = "0.1.0"
description = "智翼（ZhiYi）AI 学习助手平台 - 后端服务"
requires-python = ">=3.12"
authors = [{ name = "智翼开发团队" }]

dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncmy>=0.2",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "redis>=5.0",
    "celery>=5.4",
    "sse-starlette>=1.8",
    "loguru>=0.7",
    "aiofiles>=24.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "black>=24.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=app --cov-report=term-missing"
